# pike-allegro5

./: Allegro.cmod  Makefile.in  README.txt  configure.in  constants.h
